--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,17 +9,18 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+           
             <li class="nav-item">
-                <a class="nav-link" href="/rand">Random</a>
+                <a class="nav-link" href="/r/paris">Paris</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/r/chickens">Chickens</a>
+                <a class="nav-link" href="/r/barcelona">Barcelona</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/r/soccer">Soccer</a>
-            </li>
+                <a class="nav-link" href="/r/leopolis">Leopolis </a>
+            </li> 
             <li class="nav-item">
-                <a class="nav-link" href="/r/mightyharvest">Mighty Harvest</a>
+                <a class="nav-link" href="/rand">Get Your Number</a>
             </li>
         </ul>
     </div>
