--- a/views/subreddit.ejs
+++ b/views/subreddit.ejs
@@ -6,7 +6,7 @@
 
     <h1>Browsing The <%= name %> subreddit</h1>
     <h2><%= description %></h2>
-    <p><%=subscribers %> Total Subscribers</p>
+    <p><%=population %> Population</p>
     <hr>
 
     <% for(let post of posts) { %>
