--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>akseniya-travel-girl</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            text-align: justify;
+        }
+
+        h1 {
+            color: #4CAF50;
+        }
+
+        p {
+            margin-bottom: 15px;
+        }
+
+        /* You can add more styles based on your preferences */
+    </style>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
