--- a/views/subreddit.ejs
+++ b/views/subreddit.ejs
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <h1>Browsing The <%= name %> subreddit</h1>
+    <h1> <%= name %></h1>
     <h2><%= description %></h2>
     <p><%=population %> Population</p>
     <hr>
