--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,23 +51,20 @@
         <h2>Welcome to my Travel World!</h2>
         <div class="card mt-3" >
           
-          <div class="mt-2" >
-    <p>Embark on a journey of discovery and adventure with me as I share tales from my globetrotting escapades to over 30 countries across three continents. From the serene landscapes of Europe to the vibrant cultures of Asia and the breathtaking scenery of the Americas, my travel blog is your passport to a world filled with wonder and exploration.</p>
+          
+<div class="mt-2">
+    <p>Embark on a captivating journey of discovery and adventure with me as I recount stories from my travels to over 30 countries across three continents. From the tranquil landscapes of Europe to the vibrant cultures of Asia and the breathtaking scenery of the Americas, my travel blog serves as your ticket to a world brimming with wonder and exploration.</p>
 
-    <p>Join me as I delve into the heart of each destination, uncovering hidden gems, and capturing the essence of my experiences through vivid storytelling and captivating imagery. Whether you're a seasoned traveler seeking inspiration for your next voyage or an armchair explorer dreaming of far-off places, you're invited to wanderlust alongside me.</p>
+<p>Come along as I delve into the heart of each destination, revealing hidden gems and conveying the essence of my experiences through vivid storytelling and captivating imagery. Whether you're an experienced traveler seeking inspiration for your next voyage or an armchair explorer daydreaming of distant places, you're welcome to join me in the realm of wanderlust.</p>
 
-    <p>Discover insider tips on the must-visit spots, delectable local cuisines, and the unique cultural nuances that make each destination unforgettable. From the bustling markets of Marrakech to the pristine beaches of Bali, my blog is your go-to resource for travel enthusiasts seeking both off-the-beaten-path adventures and well-loved classics.</p>
+<p>Uncover insider tips about must-visit spots, indulge in delectable local cuisines, and appreciate the unique cultural nuances that render each destination unforgettable. From the lively markets of Marrakech to the pristine beaches of Bali, my blog is your reliable resource for both off-the-beaten-path adventures and beloved classics.</p>
 
-    <p><strong>Explore. Dream. Discover.</strong></p>
-
-    <p>Welcome to my travel sanctuary. 🌍✈️</p>
-
-          </div>
+<p><strong>Explore. Dream. Discover.</strong></p>
+</div>
          
 
       </div> 
-      <a href="/r/paris" class="btn btn-lg btn-secondary mt-3 font-weight-bold border-white " style="background-color: orangered; color:aliceblue">
-JOIN          </a>
+      
       </main>
   
 
